--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$BaB36JlxcJ2M9Tird4Z1QuMWODfXWuOkR4NeGYAZgFYDmGyf3ESLC"
+# 	- password: java.lang.String = "$2a$05$fjnFYTKzGV7PhCUj1dVwcOsm7Rb/UKdogw044lZytB2pnqP37nkaW"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$3.c/AsPCC/6Dcg.98tWtmeYAEHXO3xae3.Hm9trpBkJUdM507GtGG"
+# 	- password: java.lang.String = "$2a$05$gKm5w/.q6LDWDsL6jg6Iy.rOQ4GERCbp5DoCWKJwherF/PVCzRmu."
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -76,4 +76,18 @@ administratorAuthenticated=5
 # 	- userAccount: acme.framework.entities.UserAccount = acme.framework.entities.UserAccount{id=3, version=0}
 # 	from acme.framework.entities.Authenticated:
 # 	- serialVersionUID: long = 1
+
+defaultCustomisation=6
+
+# acme.entities.customisations.Customisation{id=6, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 6
+# 	- version: int = 0
+# 	from acme.entities.customisations.Customisation:
+# 	- serialVersionUID: long = 1
+# 	- spamWords: java.lang.String = "sex, hard core, viagra, cialis, nigeria, you’ve won, million dollar, sexo, duro, has ganado, un millón de dólares"
+# 	- spamThreshold: java.lang.Double = 2.5
+# 	- activitySectors: java.lang.String = "Technology, Science, Arts, Business, Health, Tecnología, Ciencia, Artes, Negocios, Salud"
 
