--- a/src/main/resources/application-deployment.properties
+++ b/src/main/resources/application-deployment.properties
@@ -10,9 +10,9 @@
 
 # User-defined properties.  Please, change them to adapt the starter project to your needs. 
 
-spring.datasource.url							= jdbc:mysql://bspfmby87fday5c0i8lo-mysql.services.clever-cloud.com:3306/bspfmby87fday5c0i8lo
-spring.datasource.username						= uh6zydav7yznov8s
-spring.datasource.password						= TWboAtMwzT5cTkwcbMzm
+spring.datasource.url							= jdbc:mysql://b9egafgc3a9ocjy7gbnl-mysql.services.clever-cloud.com:3306/b9egafgc3a9ocjy7gbnl
+spring.datasource.username						= uu1geyjqkp4juhoe
+spring.datasource.password						= b0zDMKhH9JQnuFJNTz2G
 
 spring.jpa.hibernate.show-sql					= true
 spring.jpa.hibernate.format-sql					= true
