--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$fjnFYTKzGV7PhCUj1dVwcOsm7Rb/UKdogw044lZytB2pnqP37nkaW"
+# 	- password: java.lang.String = "$2a$05$3IOso713fXwJaHQH1ZQc4OYlMIRUJYR8xfAxZhkOK8MCgM4cpOvb2"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$gKm5w/.q6LDWDsL6jg6Iy.rOQ4GERCbp5DoCWKJwherF/PVCzRmu."
+# 	- password: java.lang.String = "$2a$05$5FdWlM7npVBo.yRjY3X1ruM9GmqtusNaSPrsQ2xRoabSVjRWd12De"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -90,4 +90,410 @@ defaultCustomisation=6
 # 	- spamWords: java.lang.String = "sex, hard core, viagra, cialis, nigeria, you’ve won, million dollar, sexo, duro, has ganado, un millón de dólares"
 # 	- spamThreshold: java.lang.Double = 2.5
 # 	- activitySectors: java.lang.String = "Technology, Science, Arts, Business, Health, Tecnología, Ciencia, Artes, Negocios, Salud"
+
+
+# ./src/main/population/sample-data.xml
+
+authenticatedUserAccount1=7
+
+# acme.framework.entities.UserAccount{id=7, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 7
+# 	- version: int = 0
+# 	from acme.framework.entities.UserAccount:
+# 	- serialVersionUID: long = 1
+# 	- username: java.lang.String = "user1"
+# 	- password: java.lang.String = "$2a$05$9iQmmG02nRSvCptfxri0Yeg4wm.LeqvdxOfYgR3Bxyzypabq.U7Fi"
+# 	- enabled: boolean = true
+# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=User1, surname=Test, email=user1@acme.com)
+# 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Authenticated{id=8, version=0}]
+# 	@ $assertionsDisabled: boolean = false
+
+authenticatedAuthenticated1=8
+
+# acme.framework.entities.Authenticated{id=8, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 8
+# 	- version: int = 0
+# 	from acme.framework.entities.UserRole:
+# 	- serialVersionUID: long = 1
+# 	- userAccount: acme.framework.entities.UserAccount = acme.framework.entities.UserAccount{id=7, version=0}
+# 	from acme.framework.entities.Authenticated:
+# 	- serialVersionUID: long = 1
+
+inquiry01=9
+
+# acme.entities.inquiries.Inquiry{id=9, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 9
+# 	- version: int = 0
+# 	from acme.entities.inquiries.Inquiry:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "Deploy application"
+# 	- creation: java.util.Date = <<Tue Jul 07 12:55:00 CEST 2020>>
+# 	- deadline: java.util.Date = <<Sun Dec 06 23:59:00 CET 2020>>
+# 	- description: java.lang.String = "Deploy the aplication Acme-Jobs in cloud"
+# 	- minMoney: acme.framework.datatypes.Money = <<€ 10.00>>
+# 	- maxMoney: acme.framework.datatypes.Money = <<€ 100.00>>
+# 	- email: java.lang.String = "example@hotmail.com"
+
+inquiry02=10
+
+# acme.entities.inquiries.Inquiry{id=10, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 10
+# 	- version: int = 0
+# 	from acme.entities.inquiries.Inquiry:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "Test deploy"
+# 	- creation: java.util.Date = <<Tue Jul 07 12:55:00 CEST 2020>>
+# 	- deadline: java.util.Date = <<Sun Dec 06 23:59:00 CET 2020>>
+# 	- description: java.lang.String = "Test the deploy in cloud"
+# 	- minMoney: acme.framework.datatypes.Money = <<€ 150.00>>
+# 	- maxMoney: acme.framework.datatypes.Money = <<€ 250.00>>
+# 	- email: java.lang.String = "testdeploy@hotmail.com"
+
+inquiry03=11
+
+# acme.entities.inquiries.Inquiry{id=11, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 11
+# 	- version: int = 0
+# 	from acme.entities.inquiries.Inquiry:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "Test application"
+# 	- creation: java.util.Date = <<Tue Jul 07 12:55:00 CEST 2020>>
+# 	- deadline: java.util.Date = <<Sun Dec 06 23:59:00 CET 2020>>
+# 	- description: java.lang.String = "Test the aplication Acme-Incubator in cloud"
+# 	- minMoney: acme.framework.datatypes.Money = <<€ 5.00>>
+# 	- maxMoney: acme.framework.datatypes.Money = <<€ 25.00>>
+# 	- email: java.lang.String = "testapplication@hotmail.com"
+
+technologyRecord01=12
+
+# acme.entities.technologyRecords.TechnologyRecord{id=12, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 12
+# 	- version: int = 0
+# 	from acme.entities.technologyRecords.TechnologyRecord:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "Technology Record 1"
+# 	- activitySector: java.lang.String = "Technology"
+# 	- inventor: java.lang.String = "Google"
+# 	- description: java.lang.String = "First Technology Record Test"
+# 	- website: java.lang.String = "https://www.google.com"
+# 	- email: java.lang.String = "google@gmail.com"
+# 	- openSource: java.lang.Boolean = true
+# 	- stars: java.lang.Integer = 4
+
+technologyRecord02=13
+
+# acme.entities.technologyRecords.TechnologyRecord{id=13, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 13
+# 	- version: int = 0
+# 	from acme.entities.technologyRecords.TechnologyRecord:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "Technology Record 2"
+# 	- activitySector: java.lang.String = "Science"
+# 	- inventor: java.lang.String = "NASA"
+# 	- description: java.lang.String = "Nasa Technology Record"
+# 	- website: java.lang.String = "https://www.nasa.com"
+# 	- email: java.lang.String = "nasa@gmail.com"
+# 	- openSource: java.lang.Boolean = false
+# 	- stars: java.lang.Integer = 3
+
+technologyRecord03=14
+
+# acme.entities.technologyRecords.TechnologyRecord{id=14, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 14
+# 	- version: int = 0
+# 	from acme.entities.technologyRecords.TechnologyRecord:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "Technology Record 3"
+# 	- activitySector: java.lang.String = "Technology"
+# 	- inventor: java.lang.String = "Apple"
+# 	- description: java.lang.String = "Apple Technology Record"
+# 	- website: java.lang.String = "https://www.apple.com"
+# 	- email: java.lang.String = "apple@gmail.com"
+# 	- openSource: java.lang.Boolean = false
+# 	- stars: java.lang.Integer = 2
+
+technologyRecord04=15
+
+# acme.entities.technologyRecords.TechnologyRecord{id=15, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 15
+# 	- version: int = 0
+# 	from acme.entities.technologyRecords.TechnologyRecord:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "Technology Record 4"
+# 	- activitySector: java.lang.String = "Automobile"
+# 	- inventor: java.lang.String = "Tesla Motors"
+# 	- description: java.lang.String = "Tesla Motors Technology Record"
+# 	- website: java.lang.String = "https://www.tesla.com"
+# 	- email: java.lang.String = "tesla@gmail.com"
+# 	- openSource: java.lang.Boolean = true
+# 	- stars: java.lang.Integer = 5
+
+technologyRecord05=16
+
+# acme.entities.technologyRecords.TechnologyRecord{id=16, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 16
+# 	- version: int = 0
+# 	from acme.entities.technologyRecords.TechnologyRecord:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "Technology Record 5"
+# 	- activitySector: java.lang.String = "Science"
+# 	- inventor: java.lang.String = "SpaceX"
+# 	- description: java.lang.String = "SpaceX Technology Record"
+# 	- website: java.lang.String = "https://www.spacex.com"
+# 	- email: java.lang.String = "spacex@gmail.com"
+# 	- openSource: java.lang.Boolean = true
+# 	- stars: java.lang.Integer = 4
+
+toolRecord01=17
+
+# acme.entities.toolRecords.ToolRecord{id=17, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 17
+# 	- version: int = 0
+# 	from acme.entities.toolRecords.ToolRecord:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "Tool Record 1"
+# 	- activitySector: java.lang.String = "Technology"
+# 	- inventor: java.lang.String = "Microsoft"
+# 	- description: java.lang.String = "First Tool Record Test"
+# 	- website: java.lang.String = "https://www.microsoft.com"
+# 	- email: java.lang.String = "microsoft@hotmail.com"
+# 	- openSource: java.lang.Boolean = true
+# 	- stars: java.lang.Integer = 4
+
+toolRecord02=18
+
+# acme.entities.toolRecords.ToolRecord{id=18, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 18
+# 	- version: int = 0
+# 	from acme.entities.toolRecords.ToolRecord:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "Tool Record 2"
+# 	- activitySector: java.lang.String = "Science"
+# 	- inventor: java.lang.String = "Sony"
+# 	- description: java.lang.String = "Second Tool Record Test"
+# 	- website: java.lang.String = "https://www.sony.com"
+# 	- email: java.lang.String = "sony@hotmail.com"
+# 	- openSource: java.lang.Boolean = true
+# 	- stars: java.lang.Integer = 5
+
+toolRecord03=19
+
+# acme.entities.toolRecords.ToolRecord{id=19, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 19
+# 	- version: int = 0
+# 	from acme.entities.toolRecords.ToolRecord:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "Tool Record 3"
+# 	- activitySector: java.lang.String = "Technology"
+# 	- inventor: java.lang.String = "Paypal"
+# 	- description: java.lang.String = "Paypal Tool Record"
+# 	- website: java.lang.String = "https://www.paypal.com"
+# 	- email: java.lang.String = "paypal@hotmail.com"
+# 	- openSource: java.lang.Boolean = true
+# 	- stars: java.lang.Integer = 5
+
+toolRecord04=20
+
+# acme.entities.toolRecords.ToolRecord{id=20, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 20
+# 	- version: int = 0
+# 	from acme.entities.toolRecords.ToolRecord:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "Tool Record 4"
+# 	- activitySector: java.lang.String = "Science"
+# 	- inventor: java.lang.String = "AAAS"
+# 	- description: java.lang.String = "American Association for the Advancement of Science Tool Record"
+# 	- website: java.lang.String = "https://www.aaas.com"
+# 	- email: java.lang.String = "aaas@hotmail.com"
+# 	- openSource: java.lang.Boolean = false
+# 	- stars: java.lang.Integer = 2
+
+toolRecord05=21
+
+# acme.entities.toolRecords.ToolRecord{id=21, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 21
+# 	- version: int = 0
+# 	from acme.entities.toolRecords.ToolRecord:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "Tool Record 5"
+# 	- activitySector: java.lang.String = "Programming"
+# 	- inventor: java.lang.String = "Liquid technologies"
+# 	- description: java.lang.String = "Liquid technologies Tool Record"
+# 	- website: java.lang.String = "https://www.liquid.com"
+# 	- email: java.lang.String = "liquid@hotmail.com"
+# 	- openSource: java.lang.Boolean = false
+# 	- stars: java.lang.Integer = 3
+
+overture01=22
+
+# acme.entities.overtures.Overture{id=22, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 22
+# 	- version: int = 0
+# 	from acme.entities.overtures.Overture:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "Acme Overture"
+# 	- creation: java.util.Date = <<Tue Jul 07 12:55:00 CEST 2020>>
+# 	- deadline: java.util.Date = <<Thu Dec 10 23:59:00 CET 2020>>
+# 	- description: java.lang.String = "Description of the acme overture"
+# 	- minMoney: acme.framework.datatypes.Money = <<EUR 123.34>>
+# 	- maxMoney: acme.framework.datatypes.Money = <<EUR 431.53>>
+# 	- email: java.lang.String = "acmeoverture@hotmail.com"
+
+overture02=23
+
+# acme.entities.overtures.Overture{id=23, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 23
+# 	- version: int = 0
+# 	from acme.entities.overtures.Overture:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "Test Overture"
+# 	- creation: java.util.Date = <<Thu Jul 09 12:55:00 CEST 2020>>
+# 	- deadline: java.util.Date = <<Wed Dec 16 23:59:00 CET 2020>>
+# 	- description: java.lang.String = "Description of the test overture"
+# 	- minMoney: acme.framework.datatypes.Money = <<EUR 143.82>>
+# 	- maxMoney: acme.framework.datatypes.Money = <<EUR 324.22>>
+# 	- email: java.lang.String = "testoverture@hotmail.com"
+
+overture03=24
+
+# acme.entities.overtures.Overture{id=24, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 24
+# 	- version: int = 0
+# 	from acme.entities.overtures.Overture:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "Last Overture"
+# 	- creation: java.util.Date = <<Wed Jul 08 12:55:00 CEST 2020>>
+# 	- deadline: java.util.Date = <<Sat Dec 12 23:59:00 CET 2020>>
+# 	- description: java.lang.String = "Description of the last overture"
+# 	- minMoney: acme.framework.datatypes.Money = <<EUR 443.82>>
+# 	- maxMoney: acme.framework.datatypes.Money = <<EUR 924.52>>
+# 	- email: java.lang.String = "lastoverture@hotmail.com"
+
+notice01=25
+
+# acme.entities.notices.Notice{id=25, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 25
+# 	- version: int = 0
+# 	from acme.entities.notices.Notice:
+# 	- serialVersionUID: long = 1
+# 	- picture: java.lang.String = "https://i.imgur.com/KXmPAuz.jpg"
+# 	- title: java.lang.String = "Nuevos contagios"
+# 	- creation: java.util.Date = <<Tue Jul 07 12:55:00 CEST 2020>>
+# 	- deadline: java.util.Date = <<Thu Dec 10 23:59:00 CET 2020>>
+# 	- body: java.lang.String = "Aumentan los contagios de covid-19 en Murcia."
+# 	- optionalLinks: java.lang.String = "https://www.ev.us.es, https://www.google.es"
+
+notice02=26
+
+# acme.entities.notices.Notice{id=26, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 26
+# 	- version: int = 0
+# 	from acme.entities.notices.Notice:
+# 	- serialVersionUID: long = 1
+# 	- picture: java.lang.String = "https://i.blogs.es/0b8b8b/dribbble_acme_800_logo/1366_2000.jpg"
+# 	- title: java.lang.String = "Subida de acciones de grupo Acme"
+# 	- creation: java.util.Date = <<Fri Jul 10 12:55:00 CEST 2020>>
+# 	- deadline: java.util.Date = <<Fri Dec 11 23:59:00 CET 2020>>
+# 	- body: java.lang.String = "El grupo Acme ha obtenido una subida del valor de sus acciones en un porcentaje del 50%"
+# 	- optionalLinks: java.lang.String = ""
+
+challenge01=27
+
+# acme.entities.challenges.Challenge{id=27, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 27
+# 	- version: int = 0
+# 	from acme.entities.challenges.Challenge:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "Desafío 1"
+# 	- deadline: java.util.Date = <<Fri Dec 11 23:59:00 CET 2020>>
+# 	- description: java.lang.String = "Desafío muy duro"
+# 	- rookieGoal: acme.framework.datatypes.Money = <<€ 10.00>>
+# 	- rookieReward: acme.framework.datatypes.Money = <<€ 10.00>>
+# 	- averageGoal: acme.framework.datatypes.Money = <<€ 15.00>>
+# 	- averageReward: acme.framework.datatypes.Money = <<€ 10.00>>
+# 	- expertGoal: acme.framework.datatypes.Money = <<€ 20.00>>
+# 	- expertReward: acme.framework.datatypes.Money = <<€ 19.00>>
+
+challenge02=28
+
+# acme.entities.challenges.Challenge{id=28, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 28
+# 	- version: int = 0
+# 	from acme.entities.challenges.Challenge:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "Desafío 12"
+# 	- deadline: java.util.Date = <<Fri Dec 11 23:59:00 CET 2020>>
+# 	- description: java.lang.String = "Desafío simple"
+# 	- rookieGoal: acme.framework.datatypes.Money = <<€ 12.00>>
+# 	- rookieReward: acme.framework.datatypes.Money = <<€ 10.00>>
+# 	- averageGoal: acme.framework.datatypes.Money = <<€ 13.00>>
+# 	- averageReward: acme.framework.datatypes.Money = <<€ 13.00>>
+# 	- expertGoal: acme.framework.datatypes.Money = <<€ 23.00>>
+# 	- expertReward: acme.framework.datatypes.Money = <<€ 19.00>>
 
