--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$V2qULkwUyRVFcA4Qtq1/DOHXomp85bG4lXKWcKE4BreY8w1d/r5C6"
+# 	- password: java.lang.String = "$2a$05$uxHssVI5qe87IXDNrUo.4OkJ4yAG1tjwS8hnadscLR1hNtePsA7Gy"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$Ty9xHvPsUWq/mS2cH4DMy.s0g4BvIN9MH4Ea5Y1kJCjq3KGLFcltW"
+# 	- password: java.lang.String = "$2a$05$X5j6.EroRgjOY9EJtvP2EO9eRej9Q8ufSxsSz6PGawMSpf6Jrtw2u"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -105,7 +105,7 @@ authenticatedUserAccount1=7
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "user1"
-# 	- password: java.lang.String = "$2a$05$vn9R3cDSv1QyjFpQ4WIwDOj299LYr/919iWpbEbIBuSaMANFHOIm."
+# 	- password: java.lang.String = "$2a$05$.4Evb76FPeDCfkOaQpffGuPDWXjY5zs7qVK3VcDVEIYbkC4YyGRY2"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=User1, surname=Test, email=user1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Authenticated{id=8, version=0}]
