--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$9rnmCX32MIf32mDWSSoRGOUWhCw5uqkJcUW4e/y4SWU8i31USyXG6"
+# 	- password: java.lang.String = "$2a$05$U8P43muKUbl2kwgg48Q5VeC6.kjUGh.v5RfA8W6.KOKeGJgbhenD6"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$y70ytw4IYSmiF.kv1rbOcOZc14y.qOSh6Bs8yYS7IWaIAcmvfUu1S"
+# 	- password: java.lang.String = "$2a$05$LQbklaB5pYUAG6HeLIdWNOdA11ZSHAJERmhU5wJzR1Jr5O3C1mVxe"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -105,7 +105,7 @@ authenticatedUserAccount1=7
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "user1"
-# 	- password: java.lang.String = "$2a$05$Wo97UGhJjydGDyzRvnSnfOSQRmlSPxd2v6YagAD9.nnffofkQ6k9m"
+# 	- password: java.lang.String = "$2a$05$RVAnAvBW/NxSA/AGbPgPYuKjSFNtWTD.obGGKHVThGUFOmAJElLw2"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=User1, surname=Test, email=user1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Authenticated{id=8, version=0}]
